test/errors/multiple_errors.sg
' Test multiple syntax errors
(:= test1 "unterminated
(:= test2 [foo bar})
